# redis-subscriber

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  redis_subscriber.py  requirements.txt
.github/workflows/: release.yml  test.yml
.history/docs/: PRD_20250908143624.md  PRD_20250908143748.md  PRD_20250908143834.md  SRS_20250908144058.md  SRS_20250908144251.md
docs/: PRD.md  SRS.md
redis_subscriber/: __init__.py  subscriber.py
tests/: test_integration.py
