# GitHub Release 전용 패키지 - PyPI 배포 없음

[project]
name = "redis-subscriber"
version = "1.0.0"
description = "Redis Queue에서 메시지를 구독하고 처리하는 최소 기능 프레임워크"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Minseok kim"}
]
keywords = ["redis", "queue", "subscriber", "messaging", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "testcontainers[redis]>=3.7.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/minturtle/redis-subscriber"
Documentation = "https://github.com/minturtle/redis-subscriber#readme"
"Bug Tracker" = "https://github.com/minturtle/redis-subscriber/issues"
Releases = "https://github.com/minturtle/redis-subscriber/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["redis_subscriber*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
